common update